<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/advanced_search_settings"
        android:id="@+id/tvSettingsTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/image_size"
        android:id="@+id/tvImageSize"
        android:layout_below="@+id/tvSettingsTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="5dp"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spImageSize"
        android:entries="@array/image_sizes"
        android:layout_alignTop="@+id/tvImageSize"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/tvImageSize"
        android:layout_toEndOf="@+id/tvImageSize"
        android:layout_alignBottom="@+id/tvImageSize"
        android:padding="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/color_filter"
        android:id="@+id/tvColorFilter"
        android:layout_below="@+id/tvImageSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="5dp"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spColorFilter"
        android:entries="@array/color_filter"
        android:layout_alignTop="@+id/tvColorFilter"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/tvColorFilter"
        android:layout_toEndOf="@+id/tvColorFilter"
        android:layout_alignBottom="@+id/tvColorFilter"
        android:padding="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/image_type"
        android:id="@+id/tvImageType"
        android:layout_below="@+id/tvColorFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="5dp"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spImageType"
        android:entries="@array/image_type"
        android:layout_below="@+id/spColorFilter"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/tvImageType"
        android:layout_toEndOf="@+id/tvImageType"
        android:layout_alignBottom="@+id/tvImageType"
        android:padding="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/site_filter"
        android:id="@+id/tvSiteFilter"
        android:layout_below="@+id/tvImageType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="5dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etSiteFilter"
        android:layout_below="@+id/spImageType"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/tvSiteFilter"
        android:layout_toEndOf="@+id/tvSiteFilter"
        android:layout_alignBottom="@+id/tvSiteFilter" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/btnSave"
        android:layout_below="@+id/tvSiteFilter"
        android:layout_centerHorizontal="true"
        android:onClick="onSettingsSaved"
        android:padding="5dp"
        />

</RelativeLayout>